--- a/style.css
+++ b/style.css
@@ -16,17 +16,17 @@ li {
 li a {
     display:block;
     min-width:140px;
-    height: 50px;
+    height: 25px;
     text-align: center;
     line-height: 50px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #fff;
-    background: #2f3036;
+    color: #000;
+    background: #c6c6c6;
     text-decoration: none;
 }
 /*Hover state for top level links*/
 li:hover a {
-    background: #19c589;
+    background: #fff;
 }
 /*Style for dropdown links*/
 li:hover ul a {
