--- a/style.css
+++ b/style.css
@@ -1,1 +1,19 @@
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+#toggle { 
+  font-size: 24px; 
+}
+nav {
+  background-color: #333;
+  text-align: center;
+}
+nav ul { 
+  display: none; 
+}
+a { 
+  color: #ccc; text-decoration: none; 
+}
