--- a/csshorizontalmenu.css
+++ b/csshorizontalmenu.css
@@ -1,4 +1,4 @@
-.horizontalcssmenu ul{
+er.horizontalcssmenu ul{
 margin: 0;
 padding: 0;
 list-style-type: none;
@@ -8,7 +8,7 @@ list-style-type: none;
 .horizontalcssmenu ul li{
 position: relative;
 display: inline;
-float: left;
+float: center;
 
 }
 
@@ -20,7 +20,7 @@ padding: 2px 8px;
 border: 1px solid #202020;
 border-left-width: 0;
 text-decoration: none;
-background: url(menubg.gif) center center repeat-x;
+/*background: url(menubg.gif) center center repeat-x; remmed*/
 color: black;
 font: bold 13px Tahoma;
 }
@@ -53,7 +53,7 @@ border-width: 0 1px 1px 1px;
 }
 
 .horizontalcssmenu ul li a:hover{
-background: url(menubgover.gif) center center repeat-x;
+/*background: url(menubgover.gif) center center repeat-x; remmed */
 }
 
 .horizontalcssmenu ul li ul li a:hover{
