--- a/csshorizontalmenu.css
+++ b/csshorizontalmenu.css
@@ -20,7 +20,7 @@ padding: 2px 8px;
 border: 1px solid #202020;
 border-left-width: 0;
 text-decoration: none;
-/*background: url(menubg.gif) center center repeat-x; remmed*/
+background: url(menubg.gif) center center repeat-x;
 color: black;
 font: bold 13px Tahoma;
 }
@@ -53,17 +53,17 @@ border-width: 0 1px 1px 1px;
 }
 
 .horizontalcssmenu ul li a:hover{
-/*background: url(menubgover.gif) center center repeat-x; remmed */
+background: url(menubgover.gif) center center repeat-x;
 }
 
 .horizontalcssmenu ul li ul li a:hover{
-background: #ffffff;
+background: #cde686;
 }
 
 .horizontalcssmenu .arrowdiv{
 position: absolute;
 right: 0;
-/*background: transparent url(menuarrow.gif) no-repeat center left; remmed */
+background: transparent url(menuarrow.gif) no-repeat center left;
 }
 
 * html p#iepara{ /*For a paragraph (if any) that immediately follows menu, add 1em top spacing between the two in IE*/
